--- a/styles/styles.css
+++ b/styles/styles.css
@@ -50,13 +50,14 @@ header {
     flex-direction: row;
     gap: 34px;
     height: 40px;
+    transition: all 0.5s ease-in;
 }
 
 .header-nav ul li a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    animation: 2s ease-in-out;
+    transition: all 0.5s ease-in;
 }
 
 .burger-button {
@@ -74,6 +75,8 @@ header {
 .header-nav ul li:hover a::after {
     content: "";
     width: 90%;
+    position: relative;
+    left: 0;
     border-bottom: 3px solid #FF7420;
 }
 
@@ -103,8 +106,7 @@ header {
 }
 
 #main-section {
-    position: relative;
-    top: 160px;
+    margin-top: 160px;
     height: 935px;
 }
 
@@ -174,10 +176,8 @@ header {
 }
 
 #middle-section {
-    position: absolute;
     display: flex;
     flex-direction: column;
-    top: 1095px;
     width: 100vw;
     background-color:  #FF7420;
     padding: 57px 111px;
@@ -310,4 +310,164 @@ header {
 
 .button-container button i {
     margin-left: 15px;
+}
+
+#bottom-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 52px 112px;
+    position: relative;
+    background: linear-gradient(180deg, #191A19 0%, rgba(0, 0, 0, 0) 152.79%);
+}
+
+#bottom-section h3 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 28px;
+    line-height: 42px;
+    text-align: center;
+    margin-bottom: 28px;
+    color: #FF7420;
+}
+
+#bottom-section .client-says {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+}
+
+.client-says p {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    text-align: center;
+}
+
+.client-says p:first-child {
+    margin-bottom: 14px;
+}
+
+.client-says p:last-child {
+    margin-top: 4px;
+}
+
+#bottom-section h2 {
+    font-style: normal;
+    font-weight: 600;
+    font-size: 64px;
+    line-height: 96px;
+    margin-top: 87px;
+    margin-bottom: 121px;
+    text-align: center;
+}
+
+.form-container {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 41px;
+}
+
+.form,
+.contact-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background: #FF7420;
+    border-radius: 15px;
+    padding: 52px 60px;
+}
+
+.form h4 {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 36px;
+    margin-bottom: 24px;
+}
+
+.form p {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    margin-bottom: 18px;
+}
+
+.form form {
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+}
+
+.name-and-email-inputs,
+.phone-and-service-inputs {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    gap: 18px;
+}
+
+.form input,
+.form select,
+.form textarea {
+    width: 50%;
+    color: rgba(25, 26, 25, 0.5);
+    background: #FFFFFF;
+    border-radius: 15px;
+    border: none;
+    padding: 23px 65px 23px 65px;
+}
+
+.form textarea {
+    width: 100%;
+    height: 150px;
+}
+
+.form button,
+.contact-info button {
+    background: #191A19;
+    border-radius: 15px;
+    margin-top: 24px;
+    border: none;
+    width: 100%;
+    padding: 23px 0;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+}
+
+.contact-info h4:first-child {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 36px;
+    margin-bottom: 38px;
+}
+
+.contact-info h4:not(:first-child) {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+}
+
+.contact-info h5 {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    margin-bottom: 4px;
+}
+
+.contact-info p {
+    font-style: normal;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 24px;
+    margin-bottom: 24px;
 }
